# bu_common

./: README.md
bu_demo/: CMakeLists.txt  package.xml
bu_demo/launch/: demo.launch
bu_demo/src/: controller.py  demo.py  location.py
bu_eb/: CMakeLists.txt  package.xml
bu_eb/launch/: real_3ne_map_server.launch
bu_eb/maps/1/: eb_1st_floor_map.yaml
bu_eb/maps/2/: eb_2nd_floor_map.yaml
bu_eb/maps/3/: eb_3rd_floor_map.yaml
bu_eb/maps/multimap/: multimap.yaml
bu_ispc/: CHANGELOG.rst  CMakeLists.txt  bu_ispc_2nd_floor.pgm  package.xml
bu_ispc/maps/: bu_ispc_2nd_floor.pgm  bu_ispc_2nd_floor.yaml  map.pgm
bu_probabilistic_inference/: CMakeLists.txt  package.xml
dialog_navigation_demo/: CMakeLists.txt  README.md  package.xml
dialog_navigation_demo/src/: state_machine_simple.py
gdq/: CMakeLists.txt  package.xml
gdq/launch/: robot_experiment_py.launch  robot_experiment_py.launch.tmp
gdq/src/: README.md  __init__.py  asp_navigator.py  experiment.py  graphic.py  location.py  mbrlp.py  planning.py  robot_action.txt  robot_experiment.py  rosbag_record.py  run.sh  utils.py
gdq/src/ASP_segbot/: .gitignore  README.md  __init__.py
gdq/src/RL_segbot/: .gitignore  README.md  (+3 more)
segbot_bu_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_bu_description/gazebo/: segbot.gazebo.xacro
segbot_bu_description/robots/: segbot_bu.urdf  segbot_bu.urdf.xacro
segbot_bu_description/test/: urdf.rviz  xacrodisplay.launch
showroom_demo/: CMakeLists.txt  package.xml
showroom_demo/launch/: demo.launch
showroom_demo/src/: demo.py  location.py
(+30 files in other folders)
